# iterate_struct

./: .gitmodules  CMakeLists.txt  collect_paths_json_doc.h  collect_paths_struct.h  iterate_struct.h  json_doc_converter.h  json_doc_io.h  main.cpp  ptree_converter.h  value_printer.h
example/: CMakeLists.txt  main.cpp
include/iterate_struct/: collect_paths_json_doc.h  collect_paths_struct.h  iterate_struct.h  json_doc_converter.h  value_printer.h
